--- a/qutebrowser/styles/darkfilter.css
+++ b/qutebrowser/styles/darkfilter.css
@@ -5,10 +5,15 @@
 
 html {
   background: #111 !important;
-  filter: invert(0.90) hue-rotate(180deg) contrast(0.95) !important;
+  filter: invert(0.9) hue-rotate(180deg) contrast(0.95) !important;
 }
 
-img, video, picture, canvas, svg, object, embed {
+video,
+picture,
+canvas,
+svg,
+object,
+embed {
   filter: invert(1) hue-rotate(180deg) contrast(1.05) !important;
   background: transparent !important;
 }
